src/objects/CRM_WF_Brief__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Tipo_De_Conversion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo de conversión</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Universo__c</fullName>
        <label>Universo con base o sin base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Con BBDD</fullName>
                </value>
                <value>
                    <fullName>Sin BBDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Url_O_Landing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL o Landing</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Urls_Secundarias__c</fullName>
        <inlineHelpText>¿Cuántas URLs secundarias tienes?</inlineHelpText>
        <label>URLs secundarias</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Validacion_Brief_Aprobado__c</fullName>
        <formula>VALUE (IF(ISPICKVAL(CRM_WF_Etapa_Brief__c, &quot;Aprobado&quot;),&quot;1&quot;,&quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validación Brief aprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Variables_Dinamicas__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Variables dinámicas de la propuesta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Versión</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Vigencia_De_La_Promocion_Oferta__c</fullName>
        <formula>&quot;Del&quot; + &quot; &quot; +  TEXT ( CRM_WF_Campana_Brief__r.StartDate ) + &quot; &quot; + &quot;al&quot; + &quot; &quot; + 
               TEXT ( CRM_WF_Campana_Brief__r.EndDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vigencia de la promoción / oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_AB_Testing__c</fullName>
        <description>Campo de tipo lista de selección para la aplicación Workflow, que se utiliza para elegir si lleva AB/Testing o No</description>
        <label>AB/Testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Agencia_Trabaja_Diseno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona una Agencia a la cuenta</description>
        <label>Agencia que trabaja diseño</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brief (Agencia que trabaja diseño)</relationshipLabel>
        <relationshipName>Brief1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_CR_6_Digitos__c</fullName>
        <description>Campo de tipo texto para la aplicación Workflow, que se utiliza para capturar el código del CR a 6 dígitos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CR (6 dígitos)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_CR__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, que se utiliza para calcular el CR concatenando MX11 con los 6 dígitos del código CR</description>
        <formula>IF( GBL_WF_CR_6_Digitos__c &lt;&gt; &quot;&quot; , &quot;MX11&quot; + GBL_WF_CR_6_Digitos__c , &quot;MX11&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Comentarios__c</fullName>
        <description>Campo de tipo área de texto largo para la aplicación Workflow, que se utiliza para capturar Comentarios de la solicitud online</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Comercio__c</fullName>
        <description>Campo para la aplicación Workflow, que trae el valor del Comercio al Brief</description>
        <formula>CRM_WF_Campana_Brief__r.GBL_WF_Comercios__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comercio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Comercios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona un Comercio a la cuenta</description>
        <label>Comercio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Comercios</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Brief</relationshipLabel>
        <relationshipName>Brief</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Cuenta_del_Remitente__c</fullName>
        <description>Campo de tipo lista de selección para la aplicación Workflow, que se utiliza para seleccionar la Cuenta del Remitente</description>
        <label>Cuenta del remitente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alianzas Comerciales (promociones.bbva.mx)</fullName>
                </value>
                <value>
                    <fullName>Clientes (email.bbva.mx)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_De_Inicio_Testing__c</fullName>
        <description>Campo de tipo fecha para la aplicación Workflow, que se utiliza para capturar la Fecha de Inicio Testing de acuerdo a las reglas de negocio</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de inicio testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_Final_Testing__c</fullName>
        <description>Campo de tipo fecha para la aplicación Workflow, que se utiliza para capturar la Fecha de Final Testing de acuerdo a las reglas de negocio</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha final testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_Programada_Envio__c</fullName>
        <description>Campo de tipo fecha / hora para la aplicación Workflow, que se utiliza para capturar la Fecha programada de envío</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha programada de envío</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_Real_Envio__c</fullName>
        <description>Campo de tipo fecha / hora para la aplicación Workflow, que se utiliza para recibir de Marketing Cloud la Fecha real de envío</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha real de envío</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_Solicitud_Online_Validacion__c</fullName>
        <description>Campo de tipo fecha/hora para la aplicación Workflow, que se actualiza cuando se envía a aprobar el registro de Brief</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de solicitud online validación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_Solicitud_Online__c</fullName>
        <description>Campo de tipo fecha/hora para la aplicación Workflow, que se utiliza para calcular la fecha de la solicitud online de acuerdo al horario en el que se mando a aprobar

Se tiene que reemplazar por fórmula</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de solicitud online</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Folio_De_Gasto__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, que se utiliza para concatenar el folio de gasto primera parte más el folio de gasto segunda parte</description>
        <formula>GBL_WF_Folio_Gasto_Primera_Parte__c + &quot;-&quot; + GBL_WF_Folio_Gasto_Segunda_Parte__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio de gasto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Folio_Gasto_Primera_Parte__c</fullName>
        <description>Campo de tipo texto para la aplicación Workflow, que se utiliza para capturar el Folio de gasto - Primera parte</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Folio de gasto - Primera parte</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Folio_Gasto_Segunda_Parte__c</fullName>
        <description>Campo de tipo texto para la aplicación Workflow, que se utiliza para capturar el Folio de gasto - Segunda parte</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Folio del gasto - segunda parte</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Giro_Comercial__c</fullName>
        <description>Campo para la aplicación Workflow, que trae el valor del Giro comercial al Brief</description>
        <formula>CRM_WF_Campana_Brief__r.GBL_WF_Giro_Comercial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giro comercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Mes_De_Envio__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, que se utiliza traer en número el Mes de la Fecha programada de envío</description>
        <formula>MONTH( DATEVALUE( GBL_WF_Fecha_Programada_Envio__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mes de envío</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Solicitud_Online__c</fullName>
        <description>Campo de tipo texto para la aplicación Workflow, que se utiliza para capturar el nombre de una solicitud online</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de solicitud online</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_del_Remitente__c</fullName>
        <description>Campo de tipo lista de selección para la aplicación Workflow, que se utiliza para seleccionar el nombre Nombre del Remitente</description>
        <label>Nombre del remitente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TandAPP</fullName>
                </value>
                <value>
                    <fullName>A/B test sender name</fullName>
                </value>
                <value>
                    <fullName>BBVA Bancomer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBL_WF_Numero_Artes_AB_Testing__c</fullName>
        <label>Número de artes para AB / testing</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.GBL_WF_Participa_En_AB_Testing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Numero_de_Artes_Aprobados_Email__c</fullName>
        <description>Campo de tipo resumen para la aplicación Workflow, que se utiliza para contar los artes aprobados para Email</description>
        <label>Número de artes email aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Marketing Cloud, Email Marketing Cloud con cambios, Email Desclub, Email Desclub con cambios</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Numero_de_Artes_Email__c</fullName>
        <description>Campo de tipo resumen para la aplicación Workflow, que se utiliza para contar los artes creados para Email</description>
        <label>Número de artes email</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Marketing Cloud, Email Marketing Cloud con cambios, Email Desclub, Email Desclub con cambios</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GBL_WF_PEP_3_digitos__c</fullName>
        <description>Campo de tipo texto para la aplicación Workflow, que se utiliza para capturar el código del PEP - 3 dígitos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PEP - 3 dígitos</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_PEP_8_digitos__c</fullName>
        <description>Campo de tipo texto para la aplicación Workflow, que se utiliza para capturar el código del PEP - 8 digitos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PEP - 8 digitos</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_PEP__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, que se utiliza para calcular el código del PEP concatenando GB más el PEP a 8 dígitos más el PEP a 3 dígitos</description>
        <formula>&quot;GB.&quot;+ GBL_WF_PEP_8_digitos__c + &quot;-&quot; + GBL_WF_PEP_3_digitos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PEP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Pixeles__c</fullName>
        <description>Campo de tipo área de texto enriquecido para la aplicación Workflow, que se utiliza para capturar los Pixeles</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pixeles</label>
        <length>6000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Propuesta_U_Venta__c</fullName>
        <description>Campo para la aplicación Workflow, que trae el valor de la Propuesta Ünica de Valor al Brief</description>
        <formula>CRM_WF_Campana_Brief__r.GBL_WF_Comercios__r.GBL_WF_Propuesta_Unica_De_Valor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propuesta única de venta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Razon_De_Ser_Prueba__c</fullName>
        <description>Campo de tipo área de texto largo para la aplicación Workflow, que se utiliza para capturar la Razón de ser de la prueba</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Razón de ser de la prueba</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo que busca a la persona que solicita el Brief</description>
        <label>Solicitante</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.GBL_WF_Funcion__c</field>
                <operation>equals</operation>
                <value>Journey</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Brief</relationshipLabel>
        <relationshipName>Brief</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tipo_A_B_Testing__c</fullName>
        <description>Campo de tipo lista de selección para la aplicación Workflow, que se utiliza para seleccionar el Tipo A/B Testing</description>
        <label>Tipo A/B testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Diseño</fullName>
                </value>
                <value>
                    <fullName>Nombre del Remitente</fullName>
                </value>
                <value>
                    <fullName>Preheader</fullName>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Duplicados__c</fullName>
        <description>Campo para la aplicación WF, permite conocer el número de emails duplicados</description>
        <label>Duplicados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Entregados__c</fullName>
        <description>Campo para la aplicación WF, permite conocer el volumen de emails entregados</description>
        <label>Entregados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Err_neos__c</fullName>
        <description>Campo para la aplicación WF, permite conocer el número de emails con error de entrega</description>
        <label>Erróneos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_fin__c</fullName>
        <description>Campo para la aplicación WF, permite determinar el último día en el que se comunican las promociones</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_inicio__c</fullName>
        <description>Campo para la aplicación WF,  permite determinar la fecha en la que comienza la comunicación</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_publicacion__c</fullName>
        <description>Campo para la aplicación WF, permite determinar la fecha en la que se debe publicar</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de publicación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_reporte_a_Datio__c</fullName>
        <description>Campo para la aplicación WF, permite detonar el reporte a datio en la fecha en la que se necesita</description>
        <formula>MX_WF_Fecha_de_inicio__c - 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de reporte a Datio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Hora_de_envio__c</fullName>
        <description>Campo para la aplicación WF, permite conocer la hora en la que se realizó el envío</description>
        <label>Hora de envío</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>MX_WF_Preheader_bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, se usa para que la agencia defina el preheader para el segmento alto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preheader bancario alto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Rebotados__c</fullName>
        <description>Campo para la aplicación WF, permite conocer el número de emails rebotados</description>
        <label>Rebotados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Subject_bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, se utiliza para que la agencia determine el subject del correo para el segmento alto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject bancario alto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Subtitulo__c</fullName>
        <description>Campo para la aplicación WF, se utiliza para que la agencia determine el subject del correo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subtítulo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Subtitulo_bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, se utiliza para que la agencia determine el subject del correo para el segmento patrimonial</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subtítulo bancario alto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Suprimidos__c</fullName>
        <description>Campo para la aplicación WF, permite conocer el número de emails que fueron eliminados</description>
        <label>Suprimidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Texto_CTA_bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, sirve para que la agencia defina el copy del CTA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Texto CTA bancario alto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Titulo__c</fullName>
        <description>Campo para la aplicación WF, permite almacenar el título para todos los segmentos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Título</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Titulo_bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, almacena el título para el bancario alto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Título bancario alto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Total_de_enviados__c</fullName>
        <description>Campo para la aplicación WF, permite almacenar la información del número de correos enviados</description>
        <label>Total de enviados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Universo_Muestra__c</fullName>
        <description>Campo de tipo numérico para la aplicación Workflow, que se utiliza para capturar el Universo Muestra</description>
        <label>Universo muestra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Val_Conteo_Artes_Email__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, que se utiliza para validar que los artes de email creados sean los mismos que los artes de email aprobados</description>
        <formula>IF( GBL_WF_Numero_de_Artes_Aprobados_Email__c  = GBL_WF_Numero_de_Artes_Email__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validación conteo artes email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Canales_disp_solicitud_de_envio__c</fullName>
        <formula>CRM_WF_Numero_de_Canales_aprobados__c - MX_WF_No_de_Canales_con_Solicitud_de_env__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canales disp. para solicitud de envío</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_No_de_Canales_con_Solicitud_de_env__c</fullName>
        <description>No. de Canales que se encuentran en cierre, y tengan solicitudes de envío</description>
        <label>No. de Canales con solicitud de envio</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Cierre</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.MX_WF_No_Solicitudes__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_WF_Url_de_imagen_para_bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, almacena la imagen de la hero image para el bancario alto</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url de imágen para bancario alto</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_WF_Url_de_imagen_para_segmentos__c</fullName>
        <description>Campo para la aplicación WF, almacena la imagen de la hero image</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url de imagen para segmentos generales</label>
        <type>Url</type>
    </fields>
    <label>Brief</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brief</pluralLabel>
    <recordTypes>
        <fullName>CRM_WF_Brief_General</fullName>
        <active>true</active>
        <label>Brief General</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_WF_Email_Dinamico</fullName>
        <active>true</active>
        <label>Email Dinámico</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRM_WF_Fecha_Lanzamiento_No_Fin_Semana</fullName>
        <active>true</active>
        <errorConditionFormula>CASE( MOD (  CRM_WF_Fecha_De_Campana__c  - DATE(1990, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorDisplayField>CRM_WF_Fecha_De_Campana__c</errorDisplayField>
        <errorMessage>Favor de seleccionar una Fecha de lanzamiento de campaña en un día hábil.</errorMessage>
    </validationRules>
</CustomObject>